--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
       <p>Header Logo</p>
       <ul>
-        <li><a>header link one</a></li>
-        <li><a>header link two</a></li>
-        <li><a>header link three</a></li>
+        <li><a href="">header link one</a></li>
+        <li><a href="">header link two</a></li>
+        <li><a href="">header link three</a></li>
       </ul>
     </nav>
     <div class="hero">
