--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Awesome Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  
+
   <header>
     <nav>
-      <p>Header Logo</p>
+      <p id="header-logo">Header Logo</p>
       <ul>
         <li><a href="">header link one</a></li>
         <li><a href="">header link two</a></li>
@@ -18,13 +19,18 @@
       </ul>
     </nav>
     <div class="hero">
-      <h1>This website is awesome</h1>
-      <p>
-        This website has some subtext that goes here under the main title
-        It's a smaller font and the color is lower contrast.
-      </p>
-      <button> </button>
-      <img src="" alt="this is a placeholder for an image"></image>
+      <div class="hero-left">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title
+          It's a smaller font and the color is lower contrast.
+        </p>
+        <button>Sign up</button>
+      </div>
+      <div class="hero-right">
+        <img src="" alt="this is a placeholder for an image"></image>
+      </div>
+
     </div>
   </header>
 
