--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </ul>
     </div>
     <div class="quote">
-      <p>
+      <p class="quote-text">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's just
         filling up space, or maybe people will actually read it. Who knows? All I know is
         that it looks nice.
       </p>
-      <p>-Thor, God of Thunder</p>
+      <p class="quote-attribution">-Thor, God of Thunder</p>
     </div>
     <div class="call-to-action">
       <div class="call-to-action-left">
