--- a/index.html
+++ b/index.html
@@ -1,84 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Awesome Website</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300;1,400&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Awesome Website</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+    <body>
+        <header>
+            <nav>
+                <p id="header-logo">Header Logo</p>
+                <ul>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
+                </ul>
+            </nav>
+            <div class="hero">
+                <div class="hero-left">
+                    <h1>This website is awesome</h1>
+                    <p>
+                        This website has some subtext that goes here under the
+                        main title It's a smaller font and the color is lower
+                        contrast.
+                    </p>
+                    <button>Sign up</button>
+                </div>
+                <div class="hero-right">
+                    <img src="" alt="this is a placeholder for an image" />
+                </div>
+            </div>
+        </header>
 
-<body>
+        <main>
+            <div class="information">
+                <h2>Some random information.</h2>
+                <ul>
+                    <li>
+                        <img src="" alt="" />
+                        <p>
+                            this is some subtext under an illustration or image
+                        </p>
+                    </li>
+                    <li>
+                        <img src="" alt="" />
+                        <p>
+                            this is some subtext under an illustration or image
+                        </p>
+                    </li>
+                    <li>
+                        <img src="" alt="" />
+                        <p>
+                            this is some subtext under an illustration or image
+                        </p>
+                    </li>
+                    <li>
+                        <img src="" alt="" />
+                        <p>
+                            this is some subtext under an illustration or image
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="quote">
+                <p class="quote-text">
+                    This is an inspiring quote, or a testimonial from a
+                    customer. Maybe it's just filling up space, or maybe people
+                    will actually read it. Who knows? All I know is that it
+                    looks nice.
+                </p>
+                <p class="quote-attribution">-Thor, God of Thunder</p>
+            </div>
+            <div class="call-to-action">
+                <div class="call-to-action-left">
+                    <p>Call to action! it's time!</p>
+                    <p>
+                        Sign up for our product by clicking that button right
+                        over there!
+                    </p>
+                </div>
+                <div class="call-to-action-right">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </main>
 
-  <header>
-    <nav>
-      <p id="header-logo">Header Logo</p>
-      <ul>
-        <li><a href="">header link one</a></li>
-        <li><a href="">header link two</a></li>
-        <li><a href="">header link three</a></li>
-      </ul>
-    </nav>
-    <div class="hero">
-      <div class="hero-left">
-        <h1>This website is awesome</h1>
-        <p>
-          This website has some subtext that goes here under the main title
-          It's a smaller font and the color is lower contrast.
-        </p>
-        <button>Sign up</button>
-      </div>
-      <div class="hero-right">
-        <img src="" alt="this is a placeholder for an image"></image>
-      </div>
-
-    </div>
-  </header>
-
-  <main>
-    <div class="information">
-      <h2>Some random information.</h2>
-      <ul>
-        <li>
-          <img src="" alt="">
-          <p>this is some subtext under an illustration or image</p>
-        </li>
-        <li>
-          <img src="" alt="">
-          <p>this is some subtext under an illustration or image</p>
-        </li>
-        <li>
-          <img src="" alt="">
-          <p>this is some subtext under an illustration or image</p>
-        </li>
-        <li>
-          <img src="" alt="">
-          <p>this is some subtext under an illustration or image</p>
-        </li>
-      </ul>
-    </div>
-    <div class="quote">
-      <p class="quote-text">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just
-        filling up space, or maybe people will actually read it. Who knows? All I know is
-        that it looks nice.
-      </p>
-      <p class="quote-attribution">-Thor, God of Thunder</p>
-    </div>
-    <div class="call-to-action">
-      <div class="call-to-action-left">
-        <p>Call to action! it's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-      </div>
-      <div class="call-to-action-right">
-        <button>Sign up</button>
-      </div>
-    </div>
-  </main>
-
-  <footer>
-    <p>Copyright c The Odin Project 2021</p>
-  </footer>
-
-</body>
-
+        <footer>
+            <p>Copyright c The Odin Project 2021</p>
+        </footer>
+    </body>
 </html>
