Changed centering method for header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <body>
         <header>
+            <div class="header-content">
             <nav>
                 <p id="header-logo">Header Logo</p>
                 <ul>
@@ -27,7 +28,7 @@
                     <h1>This website is awesome</h1>
                     <p>
                         This website has some subtext that goes here under the
-                        main title It's a smaller font and the color is lower
+                        main title. It's a smaller font and the color is lower
                         contrast.
                     </p>
                     <button>Sign up</button>
@@ -35,6 +36,7 @@
                 <div class="hero-right">
                     <img src="" alt="this is a placeholder for an image" />
                 </div>
+            </div>
             </div>
         </header>
 
