--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
     <body>
         <header>
             <div class="header-content">
-            <nav>
-                <p id="header-logo">Header Logo</p>
-                <ul>
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link two</a></li>
-                    <li><a href="">header link three</a></li>
-                </ul>
-            </nav>
-            <div class="hero">
-                <div class="hero-left">
-                    <h1>This website is awesome</h1>
-                    <p>
-                        This website has some subtext that goes here under the
-                        main title. It's a smaller font and the color is lower
-                        contrast.
-                    </p>
-                    <button>Sign up</button>
+                <nav>
+                    <p id="header-logo">Header Logo</p>
+                    <ul>
+                        <li><a href="">header link one</a></li>
+                        <li><a href="">header link two</a></li>
+                        <li><a href="">header link three</a></li>
+                    </ul>
+                </nav>
+                <div class="hero">
+                    <div class="hero-left">
+                        <h1>This website is awesome</h1>
+                        <p>
+                            This website has some subtext that goes here under
+                            the main title. It's a smaller font and the color is
+                            lower contrast.
+                        </p>
+                        <button>Sign up</button>
+                    </div>
+                    <div class="hero-right">
+                        <img src="" alt="this is a placeholder for an image" />
+                    </div>
                 </div>
-                <div class="hero-right">
-                    <img src="" alt="this is a placeholder for an image" />
-                </div>
-            </div>
             </div>
         </header>
 
@@ -71,13 +71,15 @@
                 </ul>
             </div>
             <div class="quote">
-                <p class="quote-text">
-                    This is an inspiring quote, or a testimonial from a
-                    customer. Maybe it's just filling up space, or maybe people
-                    will actually read it. Who knows? All I know is that it
-                    looks nice.
-                </p>
-                <p class="quote-attribution">-Thor, God of Thunder</p>
+                <div class="quote-content">
+                    <p class="quote-text">
+                        This is an inspiring quote, or a testimonial from a
+                        customer. Maybe it's just filling up space, or maybe
+                        people will actually read it. Who knows? All I know is
+                        that it looks nice.
+                    </p>
+                    <p class="quote-attribution">-Thor, God of Thunder</p>
+                </div>
             </div>
             <div class="call-to-action">
                 <div class="call-to-action-left">
