Style call to action section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300;1,400&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="style.css" />
@@ -82,15 +82,19 @@
                 </div>
             </div>
             <div class="call-to-action">
-                <div class="call-to-action-left">
-                    <p>Call to action! it's time!</p>
-                    <p>
-                        Sign up for our product by clicking that button right
-                        over there!
-                    </p>
-                </div>
-                <div class="call-to-action-right">
-                    <button>Sign up</button>
+                <div class="call-to-action-content">
+                    <div class="call-to-action-left">
+                        <p class="call-to-action-call">
+                            Call to action! it's time!
+                        </p>
+                        <p class="call-to-action-info">
+                            Sign up for our product by clicking that button
+                            right over there!
+                        </p>
+                    </div>
+                    <div class="call-to-action-right">
+                        <button>Sign up</button>
+                    </div>
                 </div>
             </div>
         </main>
